--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
         <section class="product">
             <div>
             <img src="images/牛.jpg" alt="主餐">
-            <h3> <li><a href="file:///C:/Users/user/Desktop/%E5%92%96%E5%95%A1%E5%BB%B3/CAFE/page.html">主餐</a></li></h3>
+            <h3> <li><a href="page.html">主餐</a></li></h3>
                 <p>創新料理，舌尖的藝術</p>
             </div>
         <div>
             <img src="images/咖啡.jpg" alt="飲品">
-            <h3><li><a href="file:///C:/Users/user/Desktop/%E5%92%96%E5%95%A1%E5%BB%B3/CAFE/drink.html">飲品</a></li></h3>
+            <h3><li><a href="drink.html">飲品</a></li></h3>
             <p>每一口都是一種享受</p>
         </div>
         <div>
             <img src="images/蛋糕.jpg" alt="甜點">
-            <h3><li><a href="file:///C:/Users/user/Desktop/%E5%92%96%E5%95%A1%E5%BB%B3/CAFE/dessert.html">甜點</a></li></h3>
+            <h3><li><a href="dessert.html">甜點</a></li></h3>
             <p>視覺盛宴，味蕾的狂歡</p>
         </div>
         </section>
